nullaway_error_530EC6A0-1250-459E-AEEE-741E6CF570BB.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/codec/ServerSentEventHttpMessageReader.java:162: error: [NullAway] dereferenced expression sseBuilder is @Nullable
					sseBuilder.id(line.substring(3).trim());
					          ^
    (see http://t.uber.com/nullaway )
